# MIBFileParser

./: .coveragerc  .gitignore  CHANGELOG.md  README.md  device_registry.json  main.py  parse_mib_files.py  pyproject.toml  query_tool.py  run_flask_app.py  test_pysmi.py  wsgi.py
MIB/: 01_OPTIX-OID-MIB.mib  04_OPTIX-GLOBAL-PER-TRAPS.mib
compiled_mibs/: OPTIX-COMMON-SNMP-MIB  OPTIX-GLOBAL-ALM-MIB  OPTIX-GLOBAL-NGWDM-MIB  OPTIX-GLOBAL-PER-MIB  OPTIX-GLOBAL-PER-TRAPS-NGWDM-MIB  OPTIX-GLOBAL-PM-MIB  OPTIX-GLOBAL-PM-TRAPS-MSTP-MIB  OPTIX-GLOBAL-SNMP-MIB  OPTIX-GLOBAL-TC-MIB  OPTIX-GLOBAL-TRAPS-MIB  OPTIX-OID-MIB  OPTIX-WDM-FUNCTION-MIB  SNMPv2-CONF  SNMPv2-SMI  SNMPv2-TC  TEST-DEPENDENCY-MIB
desktop/: BUILD_QUICKREF.md  BUILD_WINDOWS.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  PORT_FIX.md  README.md  WINDOWS_BUILD_READY.md  app.py  build.py  test_startup.py
desktop/icons/: README.md  generate_icons.py  icon.icns
examples/: basic_usage.py  oid_lookup.py
mibs_for_pysmi/: OPTIX-GLOBAL-PER-TRAPS-NGWDM-MIB.mib  OPTIX-GLOBAL-SNMP-MIB.mib  OPTIX-GLOBAL-TC-MIB.mib  OPTIX-GLOBAL-TRAPS-MIB.mib  OPTIX-OID-MIB.mib  TEST-DEPENDENCY-MIB.mib
openspec/: project.md
openspec/changes/add-desktop-wrapper/: design.md  proposal.md  tasks.md
openspec/specs/dependency-resolver-tests/: spec.md
output/: 01_OPTIX-OID-MIB.json  01_OPTIX-OID-MIB_oids.json  01_OPTIX-OID-MIB_tree.json  02_OPTIX-GLOBAL-TC-MIB.json  02_OPTIX-GLOBAL-TC-MIB_oids.json  02_OPTIX-GLOBAL-TC-MIB_tree.json  03_OPTIX-GLOBAL-TRAPS-MIB.json  03_OPTIX-GLOBAL-TRAPS-MIB_oids.json  03_OPTIX-GLOBAL-TRAPS-MIB_tree.json  04_OPTIX-GLOBAL-PER-TRAPS.json  04_OPTIX-GLOBAL-PER-TRAPS_oids.json  04_OPTIX-GLOBAL-PER-TRAPS_tree.json  05_OPTIX-GLOBAL-PM-MIB.json  05_OPTIX-GLOBAL-PM-MIB_oids.json  05_OPTIX-GLOBAL-PM-MIB_tree.json  06_OPTIX-GLOBAL-ALM-MIB.json  06_OPTIX-GLOBAL-ALM-MIB_oids.json  06_OPTIX-GLOBAL-ALM-MIB_tree.json  07_OPTIX-GLOBAL-PER-MIB.json  07_OPTIX-GLOBAL-PER-MIB_oids.json  07_OPTIX-GLOBAL-PER-MIB_tree.json  08_OPTIX-GLOBAL.json  08_OPTIX-GLOBAL_oids.json  08_OPTIX-GLOBAL_tree.json  09_OPTIX-GLOBAL-PM-TRAPS-MIB.json  09_OPTIX-GLOBAL-PM-TRAPS-MIB_oids.json  09_OPTIX-GLOBAL-PM-TRAPS-MIB_tree.json  10_OPTIX-GLOBAL-SNMP-MIB.json  10_OPTIX-GLOBAL-SNMP-MIB_oids.json  10_OPTIX-GLOBAL-SNMP-MIB_tree.json  11_OPTIX-WDM-FUNCTION-MIB.json  11_OPTIX-WDM-FUNCTION-MIB_oids.json  11_OPTIX-WDM-FUNCTION-MIB_tree.json  12_OPTIX-COMMON-SNMP-MIB.json  12_OPTIX-COMMON-SNMP-MIB_oids.json  12_OPTIX-COMMON-SNMP-MIB_tree.json  all_mibs.json  all_oids_mapping.json  statistics_report.json
src/flask_app/: app.py
src/mib_parser/: __init__.py  dependency_resolver.py  leaf_extractor.py  models.py  parser.py  serializer.py  tree.py
storage/annotations/: leaf_annotations.json
storage/leaf_nodes/: Huawei OptiXtrans DC908_leaf_nodes.json  extracted_leaf_nodes.json
tests/: README.md  __init__.py  conftest.py  test_models.py  test_parser.py  test_serializer.py  test_tree.py
tests/api/: test_core_api.py
(+143 files in other folders)
